# compilets

./: .gitattributes  .gitignore  .gitmodules  .npmignore  LICENSE  README.md  package.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: build.yml
cpp/: .gn  BUILD.gn
cpp/runtime/: LICENSE  array.h  console.cc  console.h  delay_load_hook_win.cc  function.h  math.h  number.cc  number.h  object.h  process.cc  process.h  runtime.cc  runtime.h  state.cc  state.h  string.cc  string.h  type_helper.h  type_traits.cc  type_traits.h  union.h
cpp/runtime/exe/: state_exe.cc  state_exe.h
cpp/runtime/node/: converters.h  state_node.cc  state_node.h
cpp/runtime/tests/: array_unittest.cc  number_unittest.cc  run_all.cc  stack_unittest.cc  string_unittests.cc  union_unittest.cc  union_unittests.cc
docs/: design.md  node-module.md  roadmap.md
src/: cli.ts  cpp-file.ts  cpp-project.ts  cpp-syntax-class.ts  cpp-syntax-type.ts  cpp-syntax-utils.ts  cpp-syntax.ts  gn-utils.ts  index.ts  js-utils.ts  parser-typer.ts  parser-utils.ts  parser.ts  print-utils.ts
tests/: conversion.spec.ts  cpp-project.spec.ts  run.ts  tsconfig.json
tests/data-conversion/array/: array.cpp  array.ts
tests/data-conversion/array-literal/: array.ts
tests/data-conversion/array-object/: newarr.cpp  newarr.ts
tests/data-conversion/class/: class.cpp  class.ts
tests/data-conversion/class-generic/: genericla.cpp  genericla.ts
tests/data-conversion/class-inherit/: inherit.cpp  inherit.ts
tests/data-conversion/class-nested/: nested.cpp  nested.ts
tests/data-conversion/class-union/: classunion.cpp  classunion.ts
tests/data-conversion/destructor/: destruct.cpp  destruct.ts
tests/data-conversion/export/: base.cpp  base.h  base.ts  cli.cpp  cli.ts  export.cpp  export.h  export.ts  lib.cpp  lib.h  lib.ts  main.cpp  main.ts  package.json
tests/data-conversion/expression/: express.cpp  express.ts
tests/data-conversion/forward/: forward.cpp  forward.ts
tests/data-conversion/function/: func.cpp  func.ts
tests/data-conversion/function-closure/: closure.cpp  closure.ts
tests/data-conversion/function-generic/: genericfunc.cpp  genericfunc.ts
tests/data-conversion/function-variadic/: variadic.cpp  variadic.ts
tests/data-conversion/global/: global.cpp  global.ts
tests/data-conversion/interface/: interface.cpp  interface.ts
tests/data-conversion/loop/: loop.cpp  loop.ts
tests/data-conversion/number/: number.cpp  number.ts
tests/data-conversion/persistent/: persistent.cpp  persistent.ts
tests/data-conversion/question/: question.cpp  question.ts
tests/data-conversion/string/: string.cpp  string.ts
tests/data-conversion/undefined/: undefined.cpp  undefined.ts
tests/data-conversion/union/: union.cpp  union.ts
tests/data-conversion/variable/: var.cpp  var.ts
tests/data-conversion/variadic/: variadic.cpp  variadic.ts
tests/data-cpp-project/run-array/: main.ts
tests/data-cpp-project/run-class/: main.ts
tests/data-cpp-project/run-class-generic/: main.ts
tests/data-cpp-project/run-class-inherit/: main.ts
tests/data-cpp-project/run-class-union/: main.ts
tests/data-cpp-project/run-closure/: main.ts
tests/data-cpp-project/run-comparisons/: main.ts  package.json
tests/data-cpp-project/run-cyclic-ref/: main.ts
tests/data-cpp-project/run-string/: main.ts  package.json
tests/data-node-module/deep/: package.json  tsconfig.json
tests/data-node-module/deep/src/: lib.ts  main.ts
tests/data-node-module/pi/: index.js  package.json  pi.ts
tests/data/class/: class.cpp  class.ts
tests/data/expression/: express.ts
tests/data/expression-simple/: express.cpp  express.ts
tests/data/function/: func.cpp  func.ts
tests/data/loop/: loop.cpp  loop.ts
tests/data/variable/: var.cpp  var.ts
tests/data/variable-simple/: var.cpp  var.ts
