import("//testing/test.gni")

config("runtime_config") {
  include_dirs = [ "." ]
}

source_set("runtime") {
  public_configs = [ ":runtime_config" ]
  public_deps = [ "cppgc" ]
  sources = [
    "runtime/array.h",
    "runtime/console.cc",
    "runtime/console.h",
    "runtime/exe/state_exe.cc",
    "runtime/exe/state_exe.h",
    "runtime/function.h",
    "runtime/object.h",
    "runtime/process.cc",
    "runtime/process.h",
    "runtime/runtime.cc",
    "runtime/runtime.h",
    "runtime/type_helper.h",
    "runtime/union.h",
  ]
}

test("cpp_unittests") {
  sources = [
    "runtime/tests/run_all.cc",
    "runtime/tests/stack_unittest.cc",
  ]

  deps = [
    ":runtime",
    "//testing/gtest",
  ]
}
