import("//testing/test.gni")

# This config will be applied on generated app code.
config("app_config") {
  include_dirs = [ ".." ]
  cflags_cc = [
    "-Wno-unused-function",
  ]
}

config("runtime_config") {
  include_dirs = [ "." ]
}

source_set("runtime") {
  public_configs = [ ":runtime_config" ]
  public_deps = [ "cppgc" ]
  deps = [ "simdutf" ]
  sources = [
    "runtime/array.h",
    "runtime/console.cc",
    "runtime/console.h",
    "runtime/exe/state_exe.cc",
    "runtime/exe/state_exe.h",
    "runtime/function.h",
    "runtime/object.h",
    "runtime/process.cc",
    "runtime/process.h",
    "runtime/runtime.cc",
    "runtime/runtime.h",
    "runtime/string.cc",
    "runtime/string.h",
    "runtime/type_traits.h",
    "runtime/union.h",
  ]
}

test("cpp_unittests") {
  sources = [
    "runtime/tests/run_all.cc",
    "runtime/tests/stack_unittest.cc",
    "runtime/tests/string_unittests.cc",
    "runtime/tests/union_unittests.cc",
  ]

  include_dirs = [ "cppgc" ]
  cflags_cc = [ "-Wno-uninitialized-const-reference" ]

  deps = [
    ":runtime",
    "//testing/gtest",
  ]
}
